# nisamina

./: .gitignore  CONTINUITY_DISCIPLINE_PRACTICES.md  DESIGN_DECISIONS_INDEX.md  FUTURE_WORK_MANIFESTS.md  LICENSE  PLATFORM_ARCHITECTURE_INDEX.md  README.md
.github/workflows/: ci.yml
20_normalize/: cayetano_1992.py  nt_normalizer.py
40_mcp_server/: README.md  pyproject.toml  server.py
40_mcp_server/nisamina_mcp/: __init__.py  egress.py  foundry_loader.py  resources.py  server.py
40_mcp_server/nisamina_mcp/guardrails/: __init__.py  age_appropriate.py  crisis_fallback.py  disclosure.py  no_impersonation.py  off_topic.py  sacred_knowledge.py  session_breaks.py  system_prompt_v1.md
40_mcp_server/nisamina_mcp/prompts/: __init__.py  lesson_templates.py
40_mcp_server/nisamina_mcp/rag/: __init__.py  conflict_resolution.py  multi_evidence.py  retriever.py
40_mcp_server/nisamina_mcp/tools/: __init__.py  cayetano_normalize.py  cite_sources.py  lookup_headword.py  parse_morphology.py  translate_sentence.py
40_mcp_server/tests/: conftest.py  test_egress.py  test_foundry_loader.py  test_guardrails.py  test_rag.py  test_resources_prompts.py  test_server.py  test_tools.py
50_app/api/: README.md  main.py  requirements.txt
50_app/chatbot/: README.md  __init__.py  app.py  brain.py  deploy_to_hf_space.py  deploy_to_hf_space.sh  keepwarm.py  orchestrator.py  requirements.txt  tts_garifuna.py
60_training/: sakt_train.py
99_publish/: funder_seed_directory.jsonl  strip_linter.py
legal/: dpa_template.md  privacy_policy.md  safeguarding_framework.md  terms_of_service.md
(+147 files in other folders)
