[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nisamina-mcp"
version = "0.1.0"
description = "MCP server exposing the Nisamina Garifuna corpus (foundry_v6) to MCP-compatible LLM clients with strip-linter egress enforcement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [
    { name = "Wamaraga (Shaka Magarada)", email = "shakamagarada@gmail.com" },
]
keywords = ["garifuna", "mcp", "lexicon", "indigenous-language", "cayetano-1992"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[project.scripts]
nisamina-mcp = "nisamina_mcp.server:main"

[project.urls]
Homepage = "https://garifunalearningacademy.com"
Source = "https://github.com/Ibagari-Foundation/nisamina"

[tool.setuptools.packages.find]
where = ["."]
include = ["nisamina_mcp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
